# amicable-numbers

./: CMakeLists.txt  README.md  amicable_numbers.hpp  main.cpp
